# COMP9444-Group-assignment

./: .gitignore  Pipfile  README.md  TODO  gpt_dev.ipynb  nx_base_FALCON_7Binstruct.ipynb  pdf_extraction.ipynb  pyproject.toml
data/: eval_data.csv  eval_data.json  exams.txt  summary.txt
eval/: distilgpt2-finetuned-textbook_dataset_eval.csv  distilgpt2_eval.csv  falcon7b_baseline_eval.csv  falcon7b_finetuned_eval.csv  falcon7b_rag_eval.csv
eval/csv/: andrew_fine_tune_falcon_7b.csv  distilgpt2-finetuned_eval.csv  falcon7b_finetuned_eval.csv  falcon7b_rag_eval.csv  nx_7binstruct_base_trainset_output.csv
faiss_deeplearning_book/: index.faiss  index.pkl
notebooks/: 7binstruct_baseline_output.csv  andrew_fine_tune_falcon_7b.ipynb  combined_test.ipynb  falconbert.ipynb  falconbert_eval_graphs.ipynb  language_modeling.ipynb  mitch_data_prep.ipynb  mitch_eval.ipynb  mitch_fine_tune_GPT2.ipynb  mitch_fine_tune_llama2.ipynb  nx_7binstruct_baseline_output2.csv  nx_base_FALCON_7Binstruct.ipynb  submission.ipynb  vecdb_test.ipynb  word_lang_models.ipynb  word_lang_models_trained_on_colab.ipynb  word_lang_modesl.ipynb
notebooks/utils/: create_dataset.ipynb  pdf_extraction.ipynb  textbook_dataloader.ipynb
output/: lstm_gen.txt  tokenized_transformer_generated.txt  transformer_gen.txt  transformer_gen_colab.txt
output/exam_questions/: exam.pdf-AI-all.json  exam.pdf-AIpage12.txt  exam.pdf-AIpage14.txt  exam.pdf-AIpage15.txt  exam.pdf-AIpage18.txt  exam.pdf-extractedpage11.txt  exam.pdf-extractedpage2.txt  exam.pdf-extractedpage21.txt  exam.pdf-extractedpage5.txt  exam.pdf-extractedpage8.txt  exam.pdf-extractedpage9.txt
output/exam_questions/fall/: exam.pdf-AIpage1.txt  exam.pdf-AIpage3.txt  exam.pdf-AIpage4.txt  exam.pdf-AIpage6.txt  exam.pdf-extractedpage0.txt  exam.pdf-extractedpage10.txt  exam.pdf-extractedpage13.txt  exam.pdf-extractedpage16.txt  exam.pdf-extractedpage17.txt  exam.pdf-extractedpage19.txt  exam.pdf-extractedpage20.txt  exam.pdf-extractedpage7.txt
output/exam_questions/spring/: CS230_Midterm_spring_2018.pdf-AI-all.json  CS230_Midterm_spring_2018.pdf-AIpage0.txt  (+67 more)
output/generated_text/: lstm_gen_colab.txt
results/: falcon_finetune_results.csv  falcon_results.csv  gpt2_finetune_results.csv  gpt2_results.csv  rag_results.csv
texts/: combined_texts.txt
texts/textbooks/: AAAMLP.txt  DSML.txt  Machine Learning for Humans.txt  deeplearningbook.txt  mml-book.txt
utils/: create_dataset.ipynb  pdf_extraction.ipynb  textbook_dataloader.ipynb
