[project]
name = "comp9444-group-project"
version = "0.1"
description = "group assignment"
authors = [
    {name = "Mitch Hayes", email = "mitchelljphayes@gmail.com"},
]
dependencies = [
    "langchain",
    "python-dotenv",
    "openai",
    "pypdf2",
    "pypdf",
    "torch",
    "datasets",
    "tiktoken",
    "mwparserfromhell",
    "apache-beam",
    "transformers>=4.35.0",
    "accelerate>=0.24.1",
    "evaluate>=0.4.1",
    "nltk>=3.8.1",
    "rouge-score>=0.1.2",
    "trl>=0.7.4",
    "peft>=0.6.1",
    "bitsandbytes>=0.41.2",
    "scipy>=1.11.3",
    "bert-score>=0.3.13",
]
requires-python = ">=3.9,<3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
notebooks = [
    "ipykernel>=6.26.0",
    "ipywidgets>=8.1.1",
    "jupyter>=1.0.0",
]
