[project]
name = "group-project"
version = "0.1"
description = ""
authors = [
    {name = "Mitch Hayes", email = "mitchelljphayes@gmail.com"},
]
dependencies = [
    "langchain",
    "python-dotenv",
    "openai",
    "pypdf",
    "torch",
    "datasets",
    "tiktoken",
    "mwparserfromhell",
    "transformers",
    "accelerate @ git+https://github.com/huggingface/accelerate.git",
    "evaluate",
    "nltk",
    "trl",
    "peft",
    "bitsandbytes",
    "scipy",
    "bert-score",
    "pandas",
    "torchmetrics",
    "faiss-cpu",
    "llama-cpp-python",
    "pydantic==1.10.8",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
notebooks = [
    "ipykernel>=6.26.0",
    "ipywidgets>=8.1.1",
    "jupyter>=1.0.0",
]
